<resources>
    <string name="app_name">movieapp</string>
    <string name="action_settings">Settings</string>
    <string name="movie_year_hint">Year</string>
    <string name="apply">APPLY</string>
    <string-array name="movie_sortby">
        <item>Popularity Descending</item>
        <item>Popularity Ascending</item>
        <item>Rating Descending</item>
        <item>Rating Ascending</item>
        <item>Release Date Descending</item>
        <item>Release Date Ascending</item>
        <item>A-Z</item>
        <item>Z-A</item>
    </string-array>
    <string name="title_activity_movie">MoviesActivity</string>
    <string name="movie_dummy_description">hola</string>
    <string name="backdrop">backdrop</string>
    <string name="joker">Joker</string>
    <string name="description">Description</string>
    <string name="mad_man_doing_crazy_shit">Mad Man doing crazy shit</string>
    <string name="genres">Genres</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie_home">Home</string>
    <string name="movie_search">search</string>
    <string name="movie_saved">Saved</string>
    <string name="updates">Updates</string>
</resources>
